--- a/config
+++ b/config
@@ -19,18 +19,26 @@ floating_modifier $mod
 # start a terminal
 # bindsym $mod+Return exec i3-sensible-terminal
 bindsym $mod+Return exec kitty
+bindsym Mod1+Return exec kitty
 
 # kill focused window
 bindsym $mod+q kill
+bindsym Mod1+q kill
 
 # start dmenu (a program launcher)
 bindsym $mod+d exec --no-startup-id dmenu_run
+# bindsym Mod1+d exec --no-startup-id dmenu_run
 
 # change focus
 bindsym $mod+h focus left
 bindsym $mod+j focus down
 bindsym $mod+k focus up
 bindsym $mod+l focus right
+
+bindsym Mod1+h focus left
+bindsym Mod1+j focus down
+bindsym Mod1+k focus up
+bindsym Mod1+l focus right
 
 # move focused window
 bindsym $mod+Shift+h move left
@@ -55,6 +63,7 @@ bindsym $mod+v split v
 
 # enter fullscreen mode for the focused container
 bindsym $mod+f fullscreen toggle
+bindsym Mod1+m fullscreen toggle
 
 # change container layout (stacked, tabbed, toggle split)
 #bindsym $mod+s layout stacking
@@ -98,6 +107,19 @@ bindsym $mod+8 workspace number $ws8
 bindsym $mod+9 workspace number $ws9
 bindsym $mod+0 workspace number $ws10
 
+
+bindsym Mod1+1 workspace number $ws1
+bindsym Mod1+2 workspace number $ws2
+bindsym Mod1+3 workspace number $ws3
+bindsym Mod1+4 workspace number $ws4
+bindsym Mod1+5 workspace number $ws5
+bindsym Mod1+6 workspace number $ws6
+bindsym Mod1+7 workspace number $ws7
+bindsym Mod1+8 workspace number $ws8
+bindsym Mod1+9 workspace number $ws9
+bindsym Mod1+0 workspace number $ws10
+
+
 # move focused container to workspace
 bindsym $mod+Shift+1 move container to workspace number $ws1
 bindsym $mod+Shift+2 move container to workspace number $ws2
@@ -136,9 +158,9 @@ bindsym $mod+Right resize grow width 10 px or 10 ppt
 #exec_always feh --bg-fill $HOME/Pictures/fog.jpg
 exec_always nitrogen --restore &
 #exec_always systemctl --user restart pipewire pipewire-pulse
-#exec --no-startup-id picom -b
+exec --no-startup-id picom -b
 # exec_always --no-startup-id picom --config ~/.config/picom/picom.conf
-exec --no-startup-id compton -b
+# exec --no-startup-id compton -b
 exec --no-startup-id sxhkd
 exec --no-startup-id i3-msg "workspace 9;"
 exec "/opt/Qv2ray-v2.7.0-linux-x64.AppImage; i3-msg workspace 1"
@@ -210,10 +232,12 @@ bindsym Mod1+Shift+Tab workspace prev
 
 
 # Define the LibreWolf scratchpad window
-for_window [title="LibreWolf"] scratchpad enable, move scratchpad
+# for_window [title="LibreWolf"] scratchpad enable, move scratchpad
+
+# for_window [title="lf"] floating enable
+for_window [title="lf" class="kitty"] floating enable
 
 # Bind a keyboard shortcut to show/hide the LibreWolf scratchpad window
-bindsym Mod1+s [title="LibreWolf"] scratchpad show
 exec --no-startup-id export PDF_VIEWER=zathura
 exec --no-startup-id wal -R 
 
